--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "highlight.js": "^10.5.0",
     "intl-tel-input": "^17.0.11",
     "ladda": "^2.0.1",
+    "ng-wizard": "^1.3.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-chips": "^2.2.2",
     "ngx-color-picker": "^11.0.0",
